--- a/terraform/docker-compose.yaml
+++ b/terraform/docker-compose.yaml
@@ -1,16 +1,13 @@
 version: '3.7'
 services:
-  catgpt:
-    container_name: catgpt
-    image: "cr.yandex/${registry_id}/catgpt:1"
+  bingo:
+    container_name: bingo
+    image: "cr.yandex/${registry_id}/bingo"
     restart: always
     network_mode: "host"
-  unifiedagent:
-    container_name: unifiedagent
-    image: "cr.yandex/yc/unified-agent"
-    environment:
-      FOLDER_ID: "${folder_id}"
+    tty: true
+  nginx:
+    container_name: nginx
+    image: "cr.yandex/${registry_id}/nginx"
     restart: always
     network_mode: "host"
-    volumes:
-      - /ua:/etc/yandex/unified_agent/conf.d
