--- a/terraform/docker-compose.yaml
+++ b/terraform/docker-compose.yaml
@@ -1,13 +1,60 @@
 version: '3.7'
 services:
-  bingo:
-    container_name: bingo
+  bingo1:
+    container_name: bingo1
     image: "cr.yandex/${registry_id}/bingo"
     restart: always
-    network_mode: "host"
     tty: true
+    networks:
+      - bingo1
+    ports:
+      - "10001:27958"
+  bingo2:
+    container_name: bingo2
+    image: "cr.yandex/${registry_id}/bingo"
+    restart: always
+    tty: true
+    networks:
+      - bingo2
+    ports:
+      - "10002:27958"
+  bingo3:
+    container_name: bingo3
+    image: "cr.yandex/${registry_id}/bingo"
+    restart: always
+    tty: true
+    networks:
+      - bingo3
+    ports:
+      - "10003:27958"
+  bingo4:
+    container_name: bingo4
+    image: "cr.yandex/${registry_id}/bingo"
+    restart: always
+    tty: true
+    networks:
+      - bingo4
+    ports:
+      - "10004:27958"
   nginx:
     container_name: nginx
     image: "cr.yandex/${registry_id}/nginx"
     restart: always
-    network_mode: "host"
+    networks:
+      - bingo1
+      - bingo2
+      - bingo3
+      - bingo4
+    ports:
+      - "80:80"
+      - "443:443"
+
+networks:
+  bingo1:
+    name: bingo1
+  bingo2:
+    name: bingo2
+  bingo3:
+    name: bingo3
+  bingo4:
+    name: bingo4
